light mode logo

--- a/copymoon.net/dashboard/changepassword_files/app.css
+++ b/copymoon.net/dashboard/changepassword_files/app.css
@@ -2688,7 +2688,7 @@ body.dark .switch__box {
 }
 
 .sidebar__head .sidebar__close {
-  display: none;
+  display: block;
   margin-left: 8px;
   font-size: 0;
 }
